@@ -1,5 +1,14 @@
 2009-09-15	Ralf Corsépius <ralf.corsepius@rtems.org>
 
+	PR 1441/cpukit
+	* libcsupport/src/tcgetprgrp.c: Remove.
+	* libcsupport/src/tcgetpgrp.c: New (Renamed from 
+	  libcsupport/src/tcgetprgrp.c).
+	* libcsupport/Makefile.am: Add libcsupport/src/tcgetpgrp.c.
+	  Remove libcsupport/src/tcgetprgrp.c.
+
+2009-09-15	Ralf Corsépius <ralf.corsepius@rtems.org>
+
 	* libcsupport/src/getpwent.c: Ansify.
 
 2009-09-14	Sebastian Huber <Sebastian.Huber@embedded-brains.de>
